--- a/gpslogger/src/main/res/values/strings.xml
+++ b/gpslogger/src/main/res/values/strings.xml
@@ -226,6 +226,9 @@
     <string name="no_files_found">No files found, nothing to share or upload.</string>
     <string name="osm_pick_file">Pick a file to upload</string>
 
+    <string name="profile_url">Profile properties update url</string>
+    <string name="profile_url_interval">Profile properties update interval in minutes</string>
+
     <string name="debuglog_title">Write to debug file</string>
     <string name="debuglog_summary">Writes debug messages to a file on the SD card. Warning: The file grows very fast.
     </string>
